# MPSKit

./: README.md  pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst
src/mpskit/: desirability.py
tests/: test_general.py
